--- a/app/src/main/res/layout/fragment_number_pad_one.xml
+++ b/app/src/main/res/layout/fragment_number_pad_one.xml
@@ -4,114 +4,176 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="manuele.bryan.derivagral.NumberPadOne">
-    
-    <LinearLayout android:id="@+id/row1"
-        style="@style/row">
 
-        <Button android:id="@+id/blankThree"
-            style="@style/calculatorButton" />
-        <Button android:id="@+id/delete"
-            android:text="@string/delete"
-            style="@style/calculatorButton" />
-        <Button android:id="@+id/c"
-            android:text="@string/c"
-            style="@style/calculatorButton" />
-        <Button android:id="@+id/divide"
-            android:text="@string/divide"
+    <LinearLayout
+        android:id="@+id/row1"
+        style="@style/row"
+        android:layout_weight="1">
+
+        <Button
+            android:id="@+id/blankThree"
             style="@style/calculatorButton" />
 
-    </LinearLayout>
+        <Button
+            android:id="@+id/delete"
+            style="@style/calculatorButton"
+            android:text="@string/delete" />
 
-    <LinearLayout android:id="@+id/row2"
-        style="@style/row">
+        <Button
+            android:id="@+id/c"
+            style="@style/calculatorButton"
+            android:text="@string/c" />
 
-        <Button android:id="@+id/leftParen"
-            android:text="@string/leftParen"
-            style="@style/calculatorButton" />
-        <Button android:id="@+id/rightParen"
-            android:text="@string/rightParen"
-            style="@style/calculatorButton" />
-        <Button android:id="@+id/power"
-            android:text="@string/power"
-            style="@style/calculatorButton" />
-        <Button android:id="@+id/multiply"
-            android:text="@string/multiply"
-            style="@style/calculatorButton" />
+        <Button
+            android:id="@+id/divide"
+            style="@style/calculatorButton"
+            android:text="@string/divide" />
 
     </LinearLayout>
 
-    <LinearLayout android:id="@+id/row3"
-        style="@style/row">
+    <LinearLayout
+        android:id="@+id/row2"
+        style="@style/row"
+        android:layout_weight="1">
 
-        <Button android:id="@+id/seven"
-            android:text="@string/seven"
-            style="@style/calculatorButton" />
-        <Button android:id="@+id/eight"
-            android:text="@string/eight"
-            style="@style/calculatorButton" />
-        <Button android:id="@+id/nine"
-            android:text="@string/nine"
-            style="@style/calculatorButton" />
-        <Button android:id="@+id/minus"
-            android:text="@string/minus_symbol"
-            style="@style/calculatorButton" />
+        <Button
+            android:id="@+id/leftParen"
+            style="@style/calculatorButton"
+            android:text="@string/leftParen" />
+
+        <Button
+            android:id="@+id/rightParen"
+            style="@style/calculatorButton"
+            android:text="@string/rightParen" />
+
+        <Button
+            android:id="@+id/power"
+            style="@style/calculatorButton"
+            android:text="@string/power" />
+
+        <Button
+            android:id="@+id/multiply"
+            style="@style/calculatorButton"
+            android:text="@string/multiply" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/row3"
+        style="@style/row"
+        android:layout_weight="1">
+
+        <Button
+            android:id="@+id/seven"
+            style="@style/calculatorButton"
+            android:text="@string/seven" />
+
+        <Button
+            android:id="@+id/eight"
+            style="@style/calculatorButton"
+            android:text="@string/eight" />
+
+        <Button
+            android:id="@+id/nine"
+            style="@style/calculatorButton"
+            android:text="@string/nine" />
+
+        <Button
+            android:id="@+id/minus"
+            style="@style/calculatorButton"
+            android:text="@string/minus_symbol" />
 
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/row4"
-        style="@style/row">
+        style="@style/row"
+        android:layout_weight="1">
 
-        <Button android:id="@+id/four"
-            android:text="@string/four"
-            style="@style/calculatorButton" />
-        <Button android:id="@+id/five"
-            android:text="@string/five"
-            style="@style/calculatorButton" />
-        <Button android:id="@+id/six"
-            android:text="@string/six"
-            style="@style/calculatorButton" />
-        <Button android:id="@+id/plus"
-            android:text="@string/plus_symbol"
-            style="@style/calculatorButton" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/row5"
-        style="@style/row">
-
-        <Button android:id="@+id/one"
-            android:text="@string/one"
-            style="@style/calculatorButton" />
-        <Button android:id="@+id/two"
-            android:text="@string/two"
-            style="@style/calculatorButton" />
-        <Button android:id="@+id/three"
-            android:text="@string/three"
-            style="@style/calculatorButton" />
-        <Button android:id="@+id/blankTwo"
-            android:text="blank"
-            style="@style/calculatorButton" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/row6"
-        style="@style/row">
-
-        <Button android:id="@+id/zero"
-            android:text="@string/zero"
+        <Button
+            android:id="@+id/four"
             style="@style/calculatorButton"
-            android:layout_weight="0.666"/>
+            android:text="@string/four" />
 
-        <Button android:id="@+id/decimal"
-            android:text="@string/decimal"
-            style="@style/calculatorButton" />
+        <Button
+            android:id="@+id/five"
+            style="@style/calculatorButton"
+            android:text="@string/five" />
 
-        <Button android:id="@+id/blank"
-            android:text="blank"
-            style="@style/calculatorButton" />
+        <Button
+            android:id="@+id/six"
+            style="@style/calculatorButton"
+            android:text="@string/six" />
+
+        <Button
+            android:id="@+id/plus"
+            style="@style/calculatorButton"
+            android:text="@string/plus_symbol" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_weight="2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_weight="3"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/row5"
+                style="@style/row">
+
+                <Button
+                    android:id="@+id/one"
+                    style="@style/calculatorButton"
+                    android:text="@string/one" />
+
+                <Button
+                    android:id="@+id/two"
+                    style="@style/calculatorButton"
+                    android:text="@string/two" />
+
+                <Button
+                    android:id="@+id/three"
+                    style="@style/calculatorButton"
+                    android:text="@string/three" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/row6"
+                style="@style/row">
+
+                <Button
+                    android:id="@+id/zero"
+                    style="@style/calculatorButton"
+                    android:layout_weight="1"
+                    android:text="@string/zero" />
+
+                <Button
+                    android:id="@+id/decimal"
+                    style="@style/calculatorButton"
+                    android:layout_weight="2"
+                    android:text="@string/decimal" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/submit"
+            android:layout_weight="1"
+            android:text="="
+            android:textDirection="locale"
+            style="@style/calculatorButton"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
