Got rid of butter-knife, redid the number-board layout, did a bunch of refactoring, and the app is functional again :D

--- a/app/src/main/res/layout/fragment_number_pad_one.xml
+++ b/app/src/main/res/layout/fragment_number_pad_one.xml
@@ -167,9 +167,9 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/submit"
+            android:id="@+id/enter"
             android:layout_weight="1"
-            android:text="="
+            android:text="@string/enter"
             android:textDirection="locale"
             style="@style/calculatorButton"
             android:layout_width="wrap_content"
