--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,12 +15,18 @@
             android:orientation="horizontal" >
 
             <TextView
-                android:id="@+id/editText"
                 android:layout_height="wrap_content"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:textSize="28sp"
-                android:text="@string/y_equals"
-                android:layout_weight="1" />
+                android:textStyle="italic"
+                android:text="f(x)=" />
+
+            <TextView
+                android:id="@+id/equationText"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:textSize="28sp"
+                android:text="" />
 
         </LinearLayout>
 
