--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,18 +1,19 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+    <style name="AppTheme" parent="android:Theme.Holo.Light.NoActionBar">
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="calculatorButton" parent="android:Theme.Holo.Light.DarkActionBar">
-        <item name="android:background">#eeeeee</item>
+    <style name="calculatorButton" parent="android:Theme.Holo.Light.NoActionBar">
+        <item name="android:background">@color/brown</item>
         <item name="android:layout_margin">1dp</item>
         <item name="android:textSize">40sp</item>
         <item name="android:layout_height">fill_parent</item>
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_weight">1</item>
         <item name="android:padding">0dp</item>
+        <item name="android:textColor">@android:color/white</item>
     </style>
 
     <style name="row" parent="android:Theme.Holo.Light.DarkActionBar">
