--- a/app/src/main/res/drawable/button_focused.xml
+++ b/app/src/main/res/drawable/button_focused.xml
@@ -1,4 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-</selector>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item>
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <solid
+                android:color="@color/light_brown"
+                />
+
+        </shape>
+    </item>
+
+    <item android:top="4dp">
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <solid
+                android:color="@color/brown"
+                />
+
+        </shape>
+    </item>
+
+</layer-list>
