--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <item name="light_brown" type="color">#c8b7be</item>
     <item name="brown" type="color">#48373e</item>
     <item name="dark_brown" type="color">#241c1f</item>
+    <item name="really_dark_brown" type="color">#090707</item>
 
     <item name="background" type="color">#5b5b64</item>
     <item name="slider" type="color">#9f95ae</item>
