--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
     </style>
 
     <style name="calculatorButton" parent="android:Theme.Holo.Light.NoActionBar">
-        <item name="android:background">@color/brown</item>
+        <item name="android:background">@drawable/calculator_button</item>
         <item name="android:layout_margin">1dp</item>
         <item name="android:textSize">40sp</item>
         <item name="android:layout_height">fill_parent</item>
