--- a/app/src/main/res/layout/fragment_number_pad_one.xml
+++ b/app/src/main/res/layout/fragment_number_pad_one.xml
@@ -26,7 +26,7 @@
 
         <Button
             android:id="@+id/divide"
-            style="@style/calculatorButton"
+            style="@style/calculatorButtonDark"
             android:text="@string/divide" />
 
     </LinearLayout>
@@ -53,7 +53,7 @@
 
         <Button
             android:id="@+id/multiply"
-            style="@style/calculatorButton"
+            style="@style/calculatorButtonDark"
             android:text="@string/multiply" />
 
     </LinearLayout>
@@ -80,7 +80,7 @@
 
         <Button
             android:id="@+id/minus"
-            style="@style/calculatorButton"
+            style="@style/calculatorButtonDark"
             android:text="@string/minus_symbol" />
 
     </LinearLayout>
@@ -107,7 +107,7 @@
 
         <Button
             android:id="@+id/plus"
-            style="@style/calculatorButton"
+            style="@style/calculatorButtonDark"
             android:text="@string/plus_symbol" />
 
     </LinearLayout>
@@ -171,7 +171,7 @@
             android:layout_weight="1"
             android:text="@string/enter"
             android:textDirection="locale"
-            style="@style/calculatorButton"
+            style="@style/calculatorButtonDark"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
 
