--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,9 @@
     <item name="slider" type="color">#9f95ae</item>
 
     <item name="light_green" type="color">#dbe3db</item>
-    <item name="green" type="color">#b7c8b7</item>
-
+    <item name="soft_green" type="color">#b7c8b7</item>
+    <item name="green" type="color">#93ac93</item>
+    <item name="dark_green" type="color">#6f916f</item>
+    <item name="really_dark_green" type="color">#374837</item>
 
 </resources>
