--- a/app/src/main/res/drawable/button_disabled.xml
+++ b/app/src/main/res/drawable/button_disabled.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
 
     <solid
-        android:color="@color/really_dark_brown"
+        android:color="@color/really_dark_green"
         />
 
 </shape> 
