--- a/app/src/main/res/drawable/dark_button_enabled.xml
+++ b/app/src/main/res/drawable/dark_button_enabled.xml
@@ -6,17 +6,17 @@
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="rectangle">
             <solid
-                android:color="@color/light_brown"
+                android:color="@color/light_green"
                 />
 
         </shape>
     </item>
 
-    <item android:top="4dp">
+    <item android:top="2dp">
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="rectangle">
             <solid
-                android:color="@color/dark_brown"
+                android:color="@color/dark_green"
                 />
 
         </shape>
