--- a/app/src/main/res/layout/alert_solution.xml
+++ b/app/src/main/res/layout/alert_solution.xml
@@ -14,6 +14,7 @@
     <TextView
         android:text="function:"
         android:textSize="18dp"
+        android:padding="10dp"
         android:layout_width="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content" />
@@ -21,8 +22,10 @@
     <ImageView
         android:id="@+id/functionImageView"
         android:layout_gravity="center_horizontal"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content" />
+        android:background="#aaaaff"
+        android:scaleType="centerInside"
+        android:layout_height="80dp"
+        android:layout_width="match_parent" />
 
     <TextView
         android:text="derivative:"
@@ -35,8 +38,10 @@
     <ImageView
         android:id="@+id/derivativeImageView"
         android:layout_gravity="center_horizontal"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content" />
+        android:background="#aaaaff"
+        android:layout_height="80dp"
+        android:scaleType="centerInside"
+        android:layout_width="match_parent" />
 
     <TextView
         android:text="integral:"
@@ -48,7 +53,9 @@
     <ImageView
         android:id="@+id/integralImageView"
         android:layout_gravity="center_horizontal"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content" />
+        android:background="#aaaaff"
+        android:scaleType="centerInside"
+        android:layout_height="80dp"
+        android:layout_width="match_parent" />
 
 </LinearLayout>
