--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
+            android:layout_margin="0dp"
             android:background="@color/soft_green"
             android:orientation="vertical">
 
@@ -23,7 +23,7 @@
                 android:background="@color/light_green"></LinearLayout>
 
             <Space
-                android:layout_height="15dp"
+                android:layout_height="36dp"
                 android:layout_width="wrap_content" />
 
             <LinearLayout
@@ -52,12 +52,58 @@
 
         <fragment android:name="manuele.bryan.derivagral.NumberPadOne"
             android:id="@+id/fragmentOne"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_margin="4dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="0dp"
             tools:layout="@layout/fragment_number_pad_one" />
 
     </LinearLayout>
+
+    <SlidingDrawer
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="false"
+        android:content="@+id/contents"
+        android:handle="@+id/handle">
+
+        <LinearLayout
+            android:id="@+id/handle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="6dp">
+
+            <LinearLayout
+                android:padding="2dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="7dp"
+                android:layout_marginTop="13dp"
+                android:background="@drawable/rounded_rectangle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/contents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <fragment android:name="manuele.bryan.derivagral.NumberPadTwo"
+                android:id="@+id/fragmentTwo"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/background"
+                tools:layout="@layout/fragment_number_pad_two" />
+        </LinearLayout>
+
+    </SlidingDrawer>
 
     <ProgressBar
         android:id="@+id/progressBar"
