--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,6 +23,12 @@
         <item name="android:background">@drawable/calculator_button_dark</item>
     </style>
 
+    <style name="secondCalculatorButton" parent="calculatorButton">
+        <item name="android:background">@drawable/second_calculator_button</item>
+        <item name="android:layout_margin">0dp</item>
+        <item name="android:textSize">28sp</item>
+    </style>
+
     <style name="row" parent="android:Theme.Holo.Light.DarkActionBar">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">fill_parent</item>
