--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,11 +17,6 @@
             android:background="@color/soft_green"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:background="@color/light_green"></LinearLayout>
-
             <Space
                 android:layout_height="36dp"
                 android:layout_width="wrap_content" />
@@ -37,6 +32,7 @@
                     android:layout_height="wrap_content"
                     android:text="f(x)="
                     android:textSize="28sp"
+                    android:textColor="@android:color/white"
                     android:textStyle="italic" />
 
                 <TextView
@@ -44,6 +40,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
+                    android:textColor="@android:color/white"
                     android:textSize="28sp" />
 
             </LinearLayout>
