--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,12 +28,12 @@
                 android:padding="16dp">
 
                 <TextView
+                    android:id="@+id/fXTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="f(x)="
                     android:textSize="28sp"
-                    android:textColor="@android:color/white"
-                    android:textStyle="italic" />
+                    android:textColor="@android:color/white" />
 
                 <TextView
                     android:id="@+id/equationText"
