--- a/app/src/main/res/layout/fragment_number_pad_one.xml
+++ b/app/src/main/res/layout/fragment_number_pad_one.xml
@@ -157,10 +157,10 @@
                     android:text="@string/zero" />
 
                 <Button
-                    android:id="@+id/decimal"
+                    android:id="@+id/x"
                     style="@style/calculatorButton"
                     android:layout_weight="2"
-                    android:text="@string/decimal" />
+                    android:text="@string/x" />
 
             </LinearLayout>
 
